// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyField Component should handle copy click 1`] = `
<Tooltip
  content="Copied to clipboard!"
  dark={true}
  disabled={false}
>
  <Button
    name="copy-field-button"
    onClick={[Function]}
    variant="connected"
  >
    <Box
      as="span"
      mr="100"
    >
      <ContentCopy
        size={14}
      />
    </Box>
     Copy
  </Button>
</Tooltip>
`;

exports[`CopyField Component should pass rest of attrs to TextField 1`] = `
<TextField
  connectRight={
    <Tooltip
      content="Copied to clipboard!"
      dark={true}
      disabled={true}
    >
      <Button
        name="copy-field-button"
        onClick={[Function]}
        variant="connected"
      >
        <Box
          as="span"
          mr="100"
        >
          <ContentCopy
            size={14}
          />
        </Box>
         Copy
      </Button>
    </Tooltip>
  }
  multiline={true}
  name="copy-field"
  onFocus={[Function]}
  readOnly={true}
  required={true}
/>
`;

exports[`CopyField Component should render - no props 1`] = `
<TextField
  connectRight={
    <Tooltip
      content="Copied to clipboard!"
      dark={true}
      disabled={true}
    >
      <Button
        name="copy-field-button"
        onClick={[Function]}
        variant="connected"
      >
        <Box
          as="span"
          mr="100"
        >
          <ContentCopy
            size={14}
          />
        </Box>
         Copy
      </Button>
    </Tooltip>
  }
  name="copy-field"
  onFocus={[Function]}
  readOnly={true}
/>
`;
